Fix overflow handling on classification visualization.

--- a/src/app/classification/classification-tree.component.scss
+++ b/src/app/classification/classification-tree.component.scss
@@ -1,3 +1,3 @@
-:host {
+.classification-outlet {
   overflow: auto;
 }
